<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/invoiceHistory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.invoce.InvoiceHistoryActivity">

    <!-- Titel-Leiste mit Hintergrundfarbe -->
    <FrameLayout
        android:id="@+id/headerContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/invoiceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:gravity="center"
            android:text="Rechnungshistorie"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/invoiceRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/headerContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
