<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="6dp"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:id="@+id/invoiceItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="10dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/invoiceText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="Rechnung"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paymentStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"

            android:text="Unbezahlt"
            android:background="@drawable/border_rounded_black"
            android:padding="10dp"
            android:textSize="16sp"
            android:gravity="center" />

        <ImageView
            android:id="@+id/invoiceMenuIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="Menü anzeigen"
            android:src="@drawable/dots" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
