...
        android:text="SharedBill von Konstantin S. und Richard Z."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/invoiceHistoryButton"
        android:layout_width="331dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_rounded_black"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
...
