<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controller.invoce.InvoiceShowActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/showInvoice"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Container für beide Bereiche -->
    <LinearLayout
        android:layout_width="match_parent"
...
